2004-08-15 Chris Wiebe

	make isOnSourceEntry(IPath) public method
	* model/org/eclipse/cdt/core/model/ISourceRoot.java
	* model/org/eclipse/cdt/internal/core/model/SourceRoot.java

2004-08-15 Alain Magloire

	First draft, work in progress.
	Removing ResolveDelta to make the ResolverChange processing easier.
	* src/org/eclipse/cdt/core/filetype/IResolverChangeListener
	* src/org/eclipse/cdt/core/filetype/ResolverChangeEvent.java
	* src/org/eclipse/cdt/core/internal/filetype/CFiletTypeResolver.java
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java

2004-08-13 Chris Wiebe

	Extra functionality in type cache to support new class wizard
	* browser/org/eclipse/cdt/core/browser/AllTypesCache.java
	* browser/org/eclipse/cdt/core/browser/IQualifiedTypeName.java
	* browser/org/eclipse/cdt/core/browser/QualifiedTypeName.java
	* browser/org/eclipse/cdt/core/browser/ITypeInfo.java
	* browser/org/eclipse/cdt/core/browser/TypeInfo.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/ITypeCache.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java

2004-08-13 Chris Wiebe

	Add findSourceRoot() method needed for class wizard
	* model/org/eclipse/cdt/core/model/ICProject.java
	* model/org/eclipse/cdt/internal/core/model/CProject.java
	
2004-08-09 Bogdan Gheorghe
	Fix for Bug 71115: Double Indexing
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	
2004-08-06 Vladimir Hirsl

	A small parser Problem fix after String to char[] optimization.
	* parser/org/eclipse/cdt/internal/core/parser/problem/Problem.java

2004-08-06 Chris Wiebe

	Add scheduling rule to CoreModel.run
	* src/org/eclipse/cdt/core/model/CoreModel.java

2004-07-30 Alain Magloire

	Add the Using-{directive,declaration} part of the Core Model.

	* model/org/eclipse/cdt/core/model/IUsing.java
	* model/org/eclipse/cdt/internal/core/model/CElement.java
	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java