@@ -1,3 +1,9 @@
+2004-08-18 Chris Wiebe
+
+	fix for bug #71353
+	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java
+	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacherJob.java
+
 2004-08-15 Chris Wiebe
 
 	make isOnSourceEntry(IPath) public method
